tests/compile_failure/src/Core/NotNullScopePtr.reset_nullptr.fail.cpp
#include <Phi/Core/ScopePtr.hpp>

int main()
{
    phi::NotNullScopePtr<int> ptr(new int(21));

    ptr.reset(nullptr);
}
